fixed overflow issue.

--- a/styles/main.css
+++ b/styles/main.css
@@ -165,6 +165,7 @@
 		margin-top: 430px;
 		margin-left: 20px;
 		margin-right: 20px;
+		overflow: hidden;
 	}
 
 	.about-wrapper {
